--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-body{
-    background-color: #ccc;
+body {
+  background-color: #ccc;
 }
 
-h1{
-    color: aqua;
+h1 {
+  color: aqua;
+}
+
+h2 {
+  color: blueviolet;
 }
