--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,8 @@
 .container h1{
     background-color: blue;
     color: whitesmoke;
-    padding: 3px;
+    padding: 3em;
+    margin: 10em;
+
+    
 }
