cambiar color styles.2

--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,6 @@
 .container h1{
     background-color: blue;
-    color: whitesmoke;
+    color: rgb(236, 48, 48);
     padding: 3em;
     margin: 10em;
 
